# ServiceLauncher

./: .gitignore  README.md  angular.json  package-lock.json  package.json  pubspec.yaml  tsconfig.app.json
.github/workflows/: release_tag.yaml
lib/: main.dart
lib/components/: edit_service_dialog.dart  side_bar.dart  start_up.dart  terminalcontroller.dart  top_bar.dart
lib/constants/: app_info.dart
lib/pages/: dashboard_page.dart  home_page.dart  service_list_page.dart  settings_page.dart
lib/services/: system_tray_service.dart
lib/services/notify/: app_notify.dart  notify.dart  system_notify.dart
lib/themes/: colors.json  theme_manager.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
setup/: default.iss
src/: custom-theme.scss  index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  paths.rs  storage.rs  system_theme.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/process_manager/: config.rs  lifecycle.rs  mod.rs  output.rs  query.rs  runner.rs  state.rs  types.rs  utils.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts  constants.ts
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+35 files in other folders)
